--- a/tallerJs/2-workshop/index.html
+++ b/tallerJs/2-workshop/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <script src="tipos-de-souvenirs.js"></script>
+    <script src="planificacion-itinerario.js"></script>
 </body>
 
 </html>
