Add Calculadora Presupuesto

--- a/tallerJs/2-workshop/index.html
+++ b/tallerJs/2-workshop/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <script src="truthy-and-Falsy.js"></script>
+    <script src="calculadora-presupuesto.js"></script>
 </body>
 
 </html>
