--- a/tallerJs/2-workshop/index.html
+++ b/tallerJs/2-workshop/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <script src="desisiones-ultima-hora.js"></script>
+    <script src="section-2/desisiones-ultima-hora.js"></script>
 </body>
 
 </html>
